adding web config
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44053

--- a/Retail/Code/Retail.Web/Web.config
+++ b/Retail/Code/Retail.Web/Web.config
@@ -92,6 +92,7 @@
 
     <add key="ExposedConnectionStringNames" value="RetailCDRDBConnString,RetailAnalyticsDBConnString"/>
     <add key="RingoDBConnStringKey" value="RingoDBConnString"/>
+    <add key="VR_AccountManager_AccountManagerDBConnStringKey"     value="ConfigurationDBConnString"/>
   </appSettings>
 
   <system.web>
