--- a/Vanrise/Code/Vanrise.AccountManager.Business/Vanrise.AccountManager.Business.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Business/Vanrise.AccountManager.Business.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="AccountManagerAssignmentManager.cs" />
     <Compile Include="AccountManagerBEDefinitionSettings.cs" />
-    <Compile Include="AMManager.cs" />
+    <Compile Include="AccountManagerManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -72,6 +72,14 @@
     <ProjectReference Include="..\Vanrise.GenericData.Entities\Vanrise.GenericData.Entities.csproj">
       <Project>{4ab1e86a-c33a-4fd4-bd00-6c5b12f5f337}</Project>
       <Name>Vanrise.GenericData.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Security.Business\Vanrise.Security.Business.csproj">
+      <Project>{98e54996-fad2-40e7-b236-be5a23fa64b1}</Project>
+      <Name>Vanrise.Security.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Security.Entities\Vanrise.Security.Entities.csproj">
+      <Project>{04de17c7-70b4-40a1-84dd-26c91ca228ac}</Project>
+      <Name>Vanrise.Security.Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
