--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Business/TOne.WhS.DBSync.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Business/TOne.WhS.DBSync.Business.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Common\IMigrator.cs" />
     <Compile Include="Common\Migrator.cs" />
     <Compile Include="Migrators\CarrierAccountStatusHistoryMigrator.cs" />
+    <Compile Include="Migrators\FinancialAccountMigrator.cs" />
     <Compile Include="Migrators\Rules\MarketPriceRuleMigrator.cs" />
     <Compile Include="Migrators\Rules\CommissionRuleMigrator.cs" />
     <Compile Include="Migrators\Rules\RouteOptionBlockFromOverrideRuleMigrator.cs" />
