Add SwitchReleaseCause Migrator
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44073

--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Business/TOne.WhS.DBSync.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Business/TOne.WhS.DBSync.Business.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Migrators\Rules\SwitchRuleMigrator.cs" />
     <Compile Include="Migrators\Rules\TariffRuleMigrator.cs" />
     <Compile Include="Migrators\Rules\TodRuleMigrator.cs" />
+    <Compile Include="Migrators\SwitchReleaseCauseMigrator.cs" />
     <Compile Include="Migrators\VRTimeZoneMigrator.cs" />
     <Compile Include="Migrators\CustomerZoneMigrator.cs" />
     <Compile Include="Migrators\CarrierAccountMigrator.cs" />
