--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Entities/TOne.WhS.DBSync.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Entities/TOne.WhS.DBSync.Entities.csproj
@@ -101,6 +101,7 @@
     <Compile Include="SourceCarrierDocument.cs" />
     <Compile Include="SourceCarrierSwitchConnectivity.cs" />
     <Compile Include="SourceMarketPrice.cs" />
+    <Compile Include="SourceSwitchReleaseCause.cs" />
     <Compile Include="SourceTOD.cs" />
     <Compile Include="SourceCommission.cs" />
     <Compile Include="SourceCustomTimeZoneInfo.cs" />
