implement forceUseTempStorage in reprocess process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44078

--- a/BusinessProcess/Code/Vanrise.Reprocess.BP.Activities/Vanrise.Reprocess.BP.Activities.csproj
+++ b/BusinessProcess/Code/Vanrise.Reprocess.BP.Activities/Vanrise.Reprocess.BP.Activities.csproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="CommitChanges.cs" />
     <Compile Include="EvaluateStagesStatus.cs" />
+    <Compile Include="ValidateReprocessInput.cs" />
     <Compile Include="GetStageActivator.cs" />
     <Compile Include="GetStageBatchRecords.cs" />
     <Compile Include="FinalizeStage.cs" />
