Add BatchScripts folder to track history on .bat changes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44082

--- a/Vanrise/Code/Resources/Resources.csproj
+++ b/Vanrise/Code/Resources/Resources.csproj
@@ -192,6 +192,9 @@
     <None Include="Documents\Internship Program.docx" />
     <None Include="Packages\SharedManagementObjects .msi" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BatchScripts\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
