--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal.CustomerAccess.Web.csproj
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal.CustomerAccess.Web.csproj
@@ -204,17 +204,21 @@
     <Content Include="PartnerPortal_CustomerAccess\Elements\AccountStatement\Services\AccountStatementAPIService.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\AccountStatement\Views\AccountStatementManagement.html" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\AccountStatement\Views\AccountStatementManagementController.js" />
+    <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\partnerportal-customeraccess-retailsubaccounts-selector.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\partnerportal-customeraccess-retailsubaccountsgrid.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\partnerportal-customeraccess-retailsubaccountsinfotiledefinitionsettings.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\partnerportal-customeraccess-retailaccountinfotiledefinitionsettings.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\partnerportal-customeraccess-retailsubaccountsinfotileruntimesettings.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\partnerportal-customeraccess-retailaccountinfotileruntimesettings.js" />
+    <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\partnerportal-customeraccess-retailusersubaccountsdefinition-editor.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\partnerportal-cutomeraccess-retailaccount-genericfielddefinition-remoteselector.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\Templates\RetailSubAccountsInfoTileDefinitionSettings.html" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\Templates\RetailAccountInfoTileDefinitionSettings.html" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\Templates\RetailSubAccountsInfoTileRuntimeSettings.html" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\Templates\RetailAccountInfoTileRuntimeSettings.html" />
+    <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\Templates\RetailUserSubaccountsBEDefinitionTemplate.html" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Directives\Templates\SubAccountsGridTemplate.html" />
+    <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Services\APIService\RetailAccountUserAPIService.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\RetailAccountInfo\Services\APIService\RetailAccountInfoAPIService.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\VRRestAPIRecordQueryInterceptor\Directives\MainExtensions\partnerportal-customeraccess-retailaccountqueryinterceptor.js" />
     <Content Include="PartnerPortal_CustomerAccess\Elements\VRRestAPIRecordQueryInterceptor\Directives\MainExtensions\Templates\RetailAccountVRRestAPIRecordQueryInterceptorTemplate.html" />
