--- a/Vanrise/Code/Vanrise.AccountManager.Business/Vanrise.AccountManager.Business.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Business/Vanrise.AccountManager.Business.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManagerAssignmentManager.cs" />
+    <Compile Include="AccountManagerBEDefinitionFilter.cs" />
     <Compile Include="AccountManagerBEDefinitionSettings.cs" />
     <Compile Include="AccountManagerManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
