--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -153,6 +153,7 @@
     <Compile Include="AccountRecurringChargeRuleSets\SingleRuleAccountRecurringChargeRuleSetSettings.cs" />
     <Compile Include="AccountSynchronizerInsertHandlers\AssignProductAndPackagesAccountInsertHandler.cs" />
     <Compile Include="AccountSynchronizerInsertHandlers\PortalAccountInsertHandler.cs" />
+    <Compile Include="AccountViews\AccountManagerView.cs" />
     <Compile Include="AccountViews\AccountIdentificationRules.cs" />
     <Compile Include="AccountViews\AccountInfo.cs" />
     <Compile Include="AccountViews\AccountPackages.cs" />
