--- a/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
@@ -54,7 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutomaticInvoiceActions\AutomaticSaveInvoiceToFileAction.cs" />
     <Compile Include="AutomaticInvoiceActions\AutomaticSendEmailAction.cs" />
+    <Compile Include="AutomaticInvoiceActions\AutomaticSaveInvoiceToFileActionRuntimeSettings.cs" />
     <Compile Include="AutomaticInvoiceActions\AutomaticSendEmailActionRuntimeSettings.cs" />
     <Compile Include="BillingPeriod\BiMonthlyBillingPeriod.cs" />
     <Compile Include="BillingPeriod\BiWeeklyBillingPeriod.cs" />
