--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.MainExtensions/TOne.WhS.BusinessEntity.MainExtensions.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.MainExtensions/TOne.WhS.BusinessEntity.MainExtensions.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeCriteriaGroups\SelectiveCodeCriteriaGroup.cs" />
+    <Compile Include="CompanyDefinition\CompanyDifinitionPricelistSettings.cs" />
     <Compile Include="CustomerGroups\SelectiveCustomerGroup.cs" />
     <Compile Include="DataRecordFieldFormulas\GatewayEvaluatorFieldFormula.cs" />
     <Compile Include="FinancialAccountTypes\CustomerPostpaid\CustomerPostpaidDefinitionSettings.cs" />
