--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -54,6 +54,9 @@
     <Reference Include="Vanrise.AccountBalance.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.AccountBalance.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.AccountManager.Entities">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.AccountManager.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Analytic.Business">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Analytic.Business.dll</HintPath>
     </Reference>
@@ -155,6 +158,9 @@
     <Compile Include="AccountHandlers\BaseAccountEventPayload.cs" />
     <Compile Include="AccountPackageRecurChargeManager.cs" />
     <Compile Include="Extensions\AccountDIDMemoryAnalyticDataManager.cs" />
+    <Compile Include="Extensions\AccountManager\RetailAccountAssignmentRuntime.cs" />
+    <Compile Include="Extensions\AccountManager\RetailAccountAssignmentDefinition.cs" />
+    <Compile Include="Extensions\AccountManager\RetailAccountManagerSubViewDefinition.cs" />
     <Compile Include="RecurChargeBalanceUpdateSummaryManager.cs" />
     <Compile Include="AccountPartDefinitionOverriddenConfiguration.cs" />
     <Compile Include="AccountRecurringChargeEvaluatorBPDefinitionSettings.cs" />
