--- a/Vanrise/Code/Vanrise.AccountManager.MainExtensions/Vanrise.AccountManager.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.MainExtensions/Vanrise.AccountManager.MainExtensions.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountManagerExtendedSettings\RegularAccountManagerDefinitionSetting.cs" />
+    <Compile Include="AccountManagerExtendedSettings\RegularAccountManagerSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
