--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="City\CityInfoFilter.cs" />
     <Compile Include="City\CityQuery.cs" />
+    <Compile Include="CompanyDefinitionConfig.cs" />
     <Compile Include="ComponentType\ComponentTypeInfo.cs" />
     <Compile Include="ComponentType\ComponentTypeInfoFilter.cs" />
     <Compile Include="ComponentType\VRComponentType.cs" />
