--- a/Vanrise/Code/Vanrise.AccountManager.Web/Vanrise.AccountManager.Web.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/Vanrise.AccountManager.Web.csproj
@@ -145,11 +145,13 @@
     <Content Include="VR_AccountManager\Constant\ModuleConfig.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\Template\AccountManagerDefinitionGridTemplate.html" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\Template\AccountManagerGrid.html" />
+    <Content Include="VR_AccountManager\Elements\AccountManager\Directives\Template\SubViewsGrid.html" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-accountmanager-grid.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-accountmanagerdefinition-grid.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\Template\AccountManagerDefinitionEditorTemplate.html" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-accountmanagerdefinition-editor.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-accountmanagerdefinition-selector.js" />
+    <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-subviews-grid.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Services\AccountManagerService.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Services\APIServices\AccountManagerAPIService.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Views\AccountManagerEditor.html" />
@@ -158,6 +160,8 @@
     <Content Include="VR_AccountManager\Elements\AccountManager\Views\AccountManagerManagementController.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Views\AssignmentDefinitionEditorController.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Views\AssignmentDefinitionEditor.html" />
+    <Content Include="VR_AccountManager\Elements\AccountManager\Views\SubViewEditor.html" />
+    <Content Include="VR_AccountManager\Elements\AccountManager\Views\SubViewEditorController.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
