Implementing save invoice to file automatic action
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44147

--- a/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
@@ -54,6 +54,7 @@
     <Compile Include="BusinessManagers\IInvoiceTypeManager.cs" />
     <Compile Include="BusinessManagers\IPartnerInvoiceSettingManager.cs" />
     <Compile Include="DataSourceBankDetails.cs" />
+    <Compile Include="ErrorMessageOutput.cs" />
     <Compile Include="GeneratedInvoice\GeneratedInvoiceBillingTransaction.cs" />
     <Compile Include="GeneratedInvoice\GenerateInvoiceInput.cs" />
     <Compile Include="GeneratedInvoice\GeneratedInvoice.cs" />
