--- a/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
@@ -45,11 +45,22 @@
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
     <Compile Include="AccountManagerAssignment.cs" />
+    <Compile Include="AccountManagerDefinitionConfig.cs" />
     <Compile Include="AccountManagerDetail.cs" />
     <Compile Include="AccountManagerQuery.cs" />
     <Compile Include="Definition\AccountManagerAssignmentDefinition.cs" />
     <Compile Include="Definition\AccountManagerSubViewDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Common.Business\Vanrise.Common.Business.csproj">
+      <Project>{571a68ec-2d45-4b5c-9e75-bb6fb7c0d7b7}</Project>
+      <Name>Vanrise.Common.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
+      <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
+      <Name>Vanrise.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
