--- a/Vanrise/Code/Vanrise.AccountManager.Business/Vanrise.AccountManager.Business.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Business/Vanrise.AccountManager.Business.csproj
@@ -46,6 +46,7 @@
     <Compile Include="AccountManagerAssignmentManager.cs" />
     <Compile Include="AccountManagerBEDefinitionFilter.cs" />
     <Compile Include="AccountManagerBEDefinitionSettings.cs" />
+    <Compile Include="AccountManagerDefinitionManager.cs" />
     <Compile Include="AccountManagerManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -73,6 +74,14 @@
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
       <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
       <Name>Vanrise.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.GenericData.Business\Vanrise.GenericData.Business.csproj">
+      <Project>{e196c862-be33-49dd-9e0d-2948fb289861}</Project>
+      <Name>Vanrise.GenericData.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.GenericData.Data\Vanrise.GenericData.Data.csproj">
+      <Project>{2c487e04-e583-411a-b116-f4485c78a572}</Project>
+      <Name>Vanrise.GenericData.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\Vanrise.GenericData.Entities\Vanrise.GenericData.Entities.csproj">
       <Project>{4ab1e86a-c33a-4fd4-bd00-6c5b12f5f337}</Project>
