--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -290,10 +290,10 @@
     <Content Include="WhS_BusinessEntity\Directives\FinancialAccount\whs-be-financialaccountbedefinition-editor.js" />
     <Content Include="WhS_BusinessEntity\Directives\FinancialAccount\whs-be-financialaccountbedefinition-extendedsettings.js" />
     <Content Include="WhS_BusinessEntity\Directives\FlaggedService\vr-whs-be-flaggedservice-selector.js" />
-    <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CompanyDefinition\Templates\CompanyDefinitionPricelistSettingsTemplate.html" />
-    <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CompanyDefinition\vr-whs-be-companydefinition-pricelistsettings.js" />
+    <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CompanyPricelistSettings\Templates\CompanyDefinitionPricelistSettingsTemplate.html" />
+    <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CompanyPricelistSettings\whs-be-companypricelistsettings-definition.js" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CompanyPricelistSettings\Templates\CompanyPricelistSettingsTemplate.html" />
-    <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CompanyPricelistSettings\vr-whs-be-companypricelistsettings.js" />
+    <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CompanyPricelistSettings\whs-be-companypricelistsettings-runtime.js" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CustomerGroup\Templates\CustomerGroupTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CustomerGroup\vr-whs-be-customergroup.js" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\DataRecordFieldFormulas\Templates\GatewayEvaluatorFieldFormulaTemplate.html" />
@@ -678,7 +678,9 @@
   <ItemGroup>
     <Content Include="WhS_BusinessEntity\Templates\ReleaseCauseTemplate.xlsx" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="WhS_BusinessEntity\Directives\MainExtensions\CompanyDefinition\Templates\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
