--- a/Vanrise/Code/Vanrise.AccountManager.Web/Vanrise.AccountManager.Web.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/Vanrise.AccountManager.Web.csproj
@@ -161,11 +161,12 @@
   <ItemGroup>
     <Content Include="VR_AccountManager\Constant\ModuleConfig.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\MainExtensions\Templates\RegularExtensionTemplate.html" />
-    <Content Include="VR_AccountManager\Elements\AccountManager\Directives\MainExtensions\vr-accountmanager-regularextension.js" />
+    <Content Include="VR_AccountManager\Elements\AccountManager\Directives\MainExtensions\Templates\RuntimeTemplate.html" />
+    <Content Include="VR_AccountManager\Elements\AccountManager\Directives\MainExtensions\vr-accountmanager-accountmanagerdefinition-regular.js" />
+    <Content Include="VR_AccountManager\Elements\AccountManager\Directives\MainExtensions\vr-accountmanager-accountmanagerruntime-regular.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\Template\AccountManagerDefinitionGridTemplate.html" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\Template\AccountManagerDefinitionSettings.html" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\Template\AccountManagerGrid.html" />
-    <Content Include="VR_AccountManager\Elements\AccountManager\Directives\Template\RuntimeTemplate.html" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\Template\SubViewsGrid.html" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-grid.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-accountmanagerdefinition-assignmentdefinition-grid.js" />
@@ -174,7 +175,6 @@
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-accountmanagerdefinition-selector.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-accountmanagerdefinitionsettings.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-accountmanagerdefinition-subviews-grid.js" />
-    <Content Include="VR_AccountManager\Elements\AccountManager\Directives\vr-accountmanager-runtime.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Services\AccountManagerService.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Services\APIServices\AccountManagerAPIService.js" />
     <Content Include="VR_AccountManager\Elements\AccountManager\Services\APIServices\AccountManagerDefintionAPIService.js" />
