adding SetInvoiceDeletedAction class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44189

--- a/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
@@ -82,6 +82,7 @@
     <Compile Include="InvoiceActionSettings\EmailAction\InvoiceFileConvertor\InvoiceRDLCFileConverter.cs" />
     <Compile Include="Convertors\InvoiceToVRObjectConvertor.cs" />
     <Compile Include="InvoiceActionSettings\DownloadFileInvoiceAction.cs" />
+    <Compile Include="InvoiceActionSettings\SetInvoiceDeletedAction.cs" />
     <Compile Include="InvoiceDataSourceSettings\ItemGroupingDataSourceSettings.cs" />
     <Compile Include="InvoiceDataSourceSettings\LastInvoicesDataSourceSettings.cs" />
     <Compile Include="InvoiceDataSourceSettings\TaxesDataSourceSettings.cs" />
